    examination to ensure that the results produced are consistent with the
    contrast comparisons used in Color::Palette::MonoContrast.

* Bug Fixes:
  * Moved +lib/color/rgb-colors.rb+ to +lib/color/rgb/colors.rb+. This should
    have no impact in general.
  * Improved the way that named colors are specified internally.

== 1.4.2 / 2013-06-30

Maintenance:
* Modernized Hoe installation of Color, removing some dependencies.
* Switched to Minitest.
* Turned on Travis CI.
* Started using Code Climate.
* Small code formatting cleanup that touched pretty much every file.

== 1.4.1 / 2010-02-03

* Imported to github.
* Converted to Hoe 2.5 spec format.

== 1.4.0 / 2007-02-11

* Merged Austin Ziegler's color-tools library (previously part of the Ruby
  PDF Tools project) with Matt Lyon's color library.
  - The HSL implementation from the Color class has been merged into
    Color::HSL. Color is a module the way it was for color-tools.
  - A thin veneer has been written to allow Color::new to return a Color::HSL
    instance; Color::HSL supports as many methods as possible that were
    previously supported by the Color class.
  - Values that were previously rounded by Color are no longer rounded;
    fractional values matter.
* Converted to hoe for project management.
* Moved to the next step of deprecating Color::Name values; printing a
  warning for each use (see the history for color-tools 1.3.0).
* Print a warning on the access of either VERSION or COLOR_TOOLS_VERSION; the
  version constant is now COLOR_VERSION.
* Added humanized versions of accessors (e.g., CMYK colours now have both #cyan
  and #c to access the cyan component of the colour; #cyan provides the value
  as a percentage).
* Added CSS3 formatters for RGB, RGBA, HSL, and HSLA outputs. Note that the
  Color library does not yet have a way of setting alpha opacity, so the
  output for RGBA and HSLA are at full alpha opacity (1.0). The values are
  output with two decimal places.