@@ -1,20 +1,9 @@
 # -*- ruby -*-
 
-# DO NOT EDIT THIS FILE. Instead, edit Rakefile, and run `rake bundler:gemfile`.
+# NOTE: This file is present to keep Travis CI happy. Edits to it will not
+# be accepted.
 
 source "https://rubygems.org/"
-
-
-gem "minitest", "~>5.0", :group => [:development, :test]
-gem "rubyforge", ">=2.0.4", :group => [:development, :test]
-gem "rdoc", "~>4.0", :group => [:development, :test]
-gem "hoe-bundler", "~>1.2", :group => [:development, :test]
-gem "hoe-doofus", "~>1.0", :group => [:development, :test]
-gem "hoe-gemspec2", "~>1.1", :group => [:development, :test]
-gem "hoe-git", "~>1.5", :group => [:development, :test]
-gem "hoe-rubygems", "~>1.0", :group => [:development, :test]
-gem "hoe-travis", "~>1.2", :group => [:development, :test]
-gem "rake", "~>10.0", :group => [:development, :test]
-gem "hoe", "~>3.6", :group => [:development, :test]
+gemspec
 
 # vim: syntax=ruby
