@@ -3,7 +3,6 @@
 require 'rubygems'
 require 'hoe'
 
-Hoe.plugin :bundler
 Hoe.plugin :doofus
 Hoe.plugin :email
 Hoe.plugin :gemspec2
@@ -12,7 +11,7 @@ Hoe.plugin :minitest
 Hoe.plugin :rubyforge
 Hoe.plugin :travis
 
-Hoe.spec 'color' do
+spec = Hoe.spec 'color' do
   developer('Austin Ziegler', 'austin@rubyforge.org')
   developer('Matt Lyon', 'matt@postsomnia.com')
 
@@ -28,7 +27,6 @@ Hoe.spec 'color' do
   self.extra_rdoc_files = FileList["*.rdoc"].to_a
   self.licenses = ["MIT"]
 
-  self.extra_dev_deps << ['hoe-bundler', '~> 1.2']
   self.extra_dev_deps << ['hoe-doofus', '~> 1.0']
   self.extra_dev_deps << ['hoe-gemspec2', '~> 1.1']
   self.extra_dev_deps << ['hoe-git', '~> 1.5']
@@ -36,4 +34,16 @@ Hoe.spec 'color' do
   self.extra_dev_deps << ['hoe-travis', '~> 1.2']
   self.extra_dev_deps << ['minitest', '~> 5.0']
   self.extra_dev_deps << ['rake', '~> 10.0']
+  self.extra_dev_deps << ['simplecov', '~> 0.7']
+end
+
+namespace :test do
+  task :coverage do
+    spec.test_prelude = [
+      'require "simplecov"',
+      'SimpleCov.start("test_frameworks") { command_name "Minitest" }',
+      'gem "minitest"'
+    ].join('; ')
+    Rake::Task['test'].execute
+  end
 end
