@@ -28,7 +28,6 @@ Gem::Specification.new do |s|
       s.add_development_dependency(%q<minitest>, ["~> 5.2"])
       s.add_development_dependency(%q<rubyforge>, [">= 2.0.4"])
       s.add_development_dependency(%q<rdoc>, ["~> 4.0"])
-      s.add_development_dependency(%q<hoe-bundler>, ["~> 1.2"])
       s.add_development_dependency(%q<hoe-doofus>, ["~> 1.0"])
       s.add_development_dependency(%q<hoe-gemspec2>, ["~> 1.1"])
       s.add_development_dependency(%q<hoe-git>, ["~> 1.5"])
@@ -40,7 +39,6 @@ Gem::Specification.new do |s|
       s.add_dependency(%q<minitest>, ["~> 5.2"])
       s.add_dependency(%q<rubyforge>, [">= 2.0.4"])
       s.add_dependency(%q<rdoc>, ["~> 4.0"])
-      s.add_dependency(%q<hoe-bundler>, ["~> 1.2"])
       s.add_dependency(%q<hoe-doofus>, ["~> 1.0"])
       s.add_dependency(%q<hoe-gemspec2>, ["~> 1.1"])
       s.add_dependency(%q<hoe-git>, ["~> 1.5"])
@@ -53,7 +51,6 @@ Gem::Specification.new do |s|
     s.add_dependency(%q<minitest>, ["~> 5.2"])
     s.add_dependency(%q<rubyforge>, [">= 2.0.4"])
     s.add_dependency(%q<rdoc>, ["~> 4.0"])
-    s.add_dependency(%q<hoe-bundler>, ["~> 1.2"])
     s.add_dependency(%q<hoe-doofus>, ["~> 1.0"])
     s.add_dependency(%q<hoe-gemspec2>, ["~> 1.1"])
     s.add_dependency(%q<hoe-git>, ["~> 1.5"])
