@@ -23,6 +23,10 @@
     have no impact in general.
   * Improved the way that named colors are specified internally.
 
+* Tooling Changes:
+  * Added simplecov for test coverage analysis.
+  * Modernized Travis CI support; fixed a 1.8.7 test bug.
+
 == 1.4.2 / 2013-06-30
 
 Maintenance:
